exports[`test YourInfoForm renders 1`] = `
<div
  className="layout">
  <header>
    <h1
      tabIndex="-1">
      Contact information
    </h1>
  </header>
  <article
    role="main">
    <form
      action={undefined}
      id="yourinfo"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="representative">
          Authorised Representative
        </label>
        <p
          className="hint"
          id="representative-hint">
          This person must be authorised to enter into contracts on behalf of the business.
        </p>
        <input
          aria-describedby="representative-hint"
          className=""
          id="representative"
          name="representative"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="phone">
          Phone
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="phone"
          name="phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="email">
          Email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="contact_name">
          Additional contact (optional)
        </label>
        <p
          className="hint"
          id="contact_name-hint">
          You can nominate someone else in your organisation to receive Marketplace communications, such as new opportunities.
        </p>
        <input
          aria-describedby="contact_name-hint"
          className=""
          id="contact_name"
          name="contact_name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="contact_phone">
          Phone
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="contact_phone"
          name="contact_phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="contact_email">
          Email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="contact_email"
          name="contact_email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <input
        role="button"
        type="submit"
        value="Save and continue" />
    </form>
  </article>
</div>
`;

exports[`test YourInfoForm renders with edit mode 1`] = `
<div
  className="layout">
  <header>
    <h1
      tabIndex="-1">
      Contact information
    </h1>
  </header>
  <article
    role="main">
    <form
      action="/foo/bar"
      id="yourinfo"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken" />
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="representative">
          Authorised Representative
        </label>
        <p
          className="hint"
          id="representative-hint">
          This person must be authorised to enter into contracts on behalf of the business.
        </p>
        <input
          aria-describedby="representative-hint"
          className=""
          id="representative"
          name="representative"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="phone">
          Phone
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="phone"
          name="phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="email">
          Email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="contact_name">
          Additional contact (optional)
        </label>
        <p
          className="hint"
          id="contact_name-hint">
          You can nominate someone else in your organisation to receive Marketplace communications, such as new opportunities.
        </p>
        <input
          aria-describedby="contact_name-hint"
          className=""
          id="contact_name"
          name="contact_name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="contact_phone">
          Phone
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="contact_phone"
          name="contact_phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="contact_email">
          Email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="contact_email"
          name="contact_email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <input
        role="button"
        type="submit"
        value="Save and continue" />
    </form>
  </article>
</div>
`;

exports[`test YourInfoForm renders with form_options 1`] = `
<div
  className="layout">
  <header>
    <h1
      tabIndex="-1">
      Contact information
    </h1>
  </header>
  <article
    role="main">
    <form
      action="/foo/bar"
      id="yourinfo"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken" />
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="representative">
          Authorised Representative
        </label>
        <p
          className="hint"
          id="representative-hint">
          This person must be authorised to enter into contracts on behalf of the business.
        </p>
        <input
          aria-describedby="representative-hint"
          className=""
          id="representative"
          name="representative"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="phone">
          Phone
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="phone"
          name="phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="email">
          Email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="contact_name">
          Additional contact (optional)
        </label>
        <p
          className="hint"
          id="contact_name-hint">
          You can nominate someone else in your organisation to receive Marketplace communications, such as new opportunities.
        </p>
        <input
          aria-describedby="contact_name-hint"
          className=""
          id="contact_name"
          name="contact_name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="contact_phone">
          Phone
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="contact_phone"
          name="contact_phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="contact_email">
          Email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="contact_email"
          name="contact_email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <input
        role="button"
        type="submit"
        value="Save and continue" />
    </form>
  </article>
</div>
`;
